<resources>
    <string name="app_name">Wallet</string>

    <!-- Button -->
    <string name="add">Add</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="export">Exporter</string>
    <string name="importData">Importer</string>
    <string name="update">Mettre à jour</string>
    <string name="edit">Modifier</string>
    <string name="no">Non</string>
    <string name="ok">Ok</string>
    <string name="yes">Oui</string>
    <string name="validate">Valider</string>

    <!-- Confirmation -->
    <string name="confirmation_delete">Voulez vous supprimer vraiment ?</string>
    <string name="confirmation_wipe">Voulez vous réinitialiser vraiment ?</string>

    <!-- Message -->
    <string name="message_amount_invalid">Montant invalide</string>
    <string name="message_filename_invalid">Nom du fichier invalide</string>
    <string name="message_title_invalid">Titre invalide</string>
    <string name="message_rest_under_amount">Montant supérieur au montant reste du projet</string>
    <string name="message_target_under_deposit">Budget inférieur au dépot</string>
    <string name="message_no_project">Aucun projet</string>

    <!-- Title -->
    <string name="administrator">Administrateur</string>
    <string name="amount">Montant</string>
    <string name="ariary">Ar</string>
    <string name="budget">Budget</string>
    <string name="current_balance">Balance</string>
    <string name="date">Date</string>
    <string name="default_filename">exported_data</string>
    <string name="deposit">Dépot</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="empty">Vide</string>
    <string name="filename">Nom du fichier</string>
    <string name="finished">Terminé</string>
    <string name="first_name">Prénom</string>
    <string name="hello">Bonjour</string>
    <string name="home">Accueil</string>
    <string name="in_progess">En cours</string>
    <string name="last_name">Nom</string>
    <string name="more">Plus</string>
    <string name="new_action">Nouveau</string>
    <string name="new_project">Nouveau projet</string>
    <string name="new_transaction">Nouveau transaction</string>
    <string name="placeholder_amount">1.000.000</string>
    <string name="priority">Priorité</string>
    <string name="profile">Profil</string>
    <string name="project">Projet</string>
    <string name="project_in_progress">Projet en cours</string>
    <string name="recently_transaction">Transaction récent</string>
    <string name="target">Cible</string>
    <string name="title">Titre</string>
    <string name="total_income">Total revenu</string>
    <string name="total_outcome">Total dépense</string>
    <string name="transaction">Transaction</string>
    <string name="type">Type</string>
    <string name="username">Utilisateur</string>
    <string name="wipe">Réinitialiser</string>
    <string name="wipe_data">Réinitialisation</string>

    <!-- Menu -->
    <string name="high">Elevée</string>
    <string name="in">Entrée</string>
    <string name="low">Faible</string>
    <string name="middle">Moyenne</string>
    <string name="out">Sortie</string>
    <string name="search">Recherche</string>
    <string name="start_date">Date debut</string>

</resources>