<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/back_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_project"
        android:textSize="18dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/grey_600"
        android:layout_marginBottom="12dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/title"
        android:layout_marginBottom="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_title_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="12dp"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/type"
        android:layout_marginBottom="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_type_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="12dp"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/priority"
        android:layout_marginBottom="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_priority_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:text="@string/low"
            android:singleLine="true"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="12dp"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/budget"
        android:layout_marginBottom="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_target_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:inputType="number"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="12dp"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/dialog_np_btn_cancel"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_500"
            android:textAllCaps="false"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/dialog_np_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            style="@style/ButtonPrimary"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>