<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@drawable/back_dialog">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_action"
        android:textSize="16sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/grey_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/item_new_project"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/project"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        style="@style/ButtonPrimary"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="12dp" />

    <Button
        android:id="@+id/item_new_trans"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/transaction"
        android:textAllCaps="false"
        android:layout_marginTop="12dp"
        style="@style/ButtonPrimary"
        app:layout_constraintTop_toBottomOf="@+id/item_new_project"
        tools:layout_editor_absoluteX="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>