<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project"
        android:textSize="16sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/grey_600"
        android:layout_marginTop="10dp"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_in_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:layout_marginStart="12dp"
        android:text="@string/in_progess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_project" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:layout_marginStart="10dp"
        android:text="@string/finished"
        app:layout_constraintStart_toEndOf="@+id/chip_in_progress"
        app:layout_constraintTop_toTopOf="@+id/chip_in_progress" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_in_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>