<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_dialog"
    android:padding="14dp">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/filename"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_filename"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="12dp"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end">
        <Button
            android:id="@+id/btn_cancel_dialog_export"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:padding="0dp"
            android:background="@drawable/back_btn_soft_primary"
            android:textAllCaps="false"
            android:textColor="@color/blue_600"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btn_ok_dialog_export"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:padding="0dp"
            android:layout_marginLeft="6dp"
            android:textAllCaps="false"
            style="@style/ButtonPrimary"
            android:text="@string/ok"/>

    </LinearLayout>
</LinearLayout>