<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_dialog"
    android:padding="14dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/user"
        app:tint="@color/grey_400"
        android:layout_gravity="center_horizontal"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">
        <TableRow>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/last_name"
                android:layout_marginRight="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="12dp"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="2dp"
                android:hint="@string/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="12dp"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
    </TableLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/email"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="12dp"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="12dp"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/profile_btn_cancel"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:padding="0dp"
            android:textColor="@color/blue_500"
            android:textAllCaps="false"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/profile_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            style="@style/ButtonPrimary"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>