<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_current_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_balance"
        android:textSize="14sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/grey_600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_amount"
        android:textSize="18sp"
        android:textColor="@color/grey_600"
        android:fontFamily="sans-serif-black"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_current_balance" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/current_balance"
        tools:layout_editor_absoluteX="10dp">

        <TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/back_btn_soft_primary"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_orbit_money_transfer_in"
                    app:tint="@color/grey_600" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/total_income"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/total_income_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/placeholder_amount"
                    android:textColor="@color/grey_600"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/back_btn_soft_primary"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_orbit_money_transfer_out"
                    app:tint="@color/grey_600" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/total_outcome"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/total_outcome_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/placeholder_amount"
                    android:textColor="@color/grey_600"
                    android:textSize="16sp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3"
        tools:layout_editor_absoluteX="12dp">

        <TableRow tools:ignore="UselessParent">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/start_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:paddingStart="12dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:hint="@string/start_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:paddingStart="12dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>